# langchain_agent_app

./: .gitignore  pyproject.toml
agent_app/agent_app/: agent.ipynb  agent.py  api.py  chat_template.py  client.py  document_retriever.py  main.py  research.ipynb  serve.py
agent_app/agent_app/qdrant_embedded_data_store/: meta.json
agent_app/agent_app/qdrant_embedded_data_store/collection/agent_doc/: storage.sqlite
